fix(ui): resolve overflow issue

--- a/src/viewer/viewer.scss
+++ b/src/viewer/viewer.scss
@@ -37,13 +37,12 @@
 
 #wrapper {
   overflow-y: scroll;
+  overflow-x: hidden;
   flex-grow: 1;
 }
 
 .split {
   display: flex;
   flex-grow: 1;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  // display: grid;
+  overflow: hidden;
 }
